tests/errors/test-error-002.slax
<this><is/><not/><slax/></this>
